--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-torch==1.8.1
-numpy==1.18.1
+hydra-core==1.3.2
+Jinja2==3.1.5
+lightning-utilities==0.12.0
+numpy==1.26.4
+omegaconf==2.3.0
 pytorch-lightning==1.2.7
-scikit-learn==0.21.3
+PyYAML==6.0.2
+scikit-learn==1.6.1
+scipy==1.13.1
+sentencepiece==0.2.0
+torch==1.8.1+cu111
+torchmetrics==1.2.1
 tqdm==4.43.0
-hydra-core==1.0.6
-transformers[sentencepiece]==4.5.1
-Jinja2==2.11.3
+transformers==4.6.1
